# django-carrot

./: .coveralls.yml  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  run_tests.py  setup.py  test.sh
carrot/: __init__.py  api.py  apps.py  consumer.py  exceptions.py  mocks.py  models.py  objects.py  samples.py  scheduler.py  scheduler_daemon.sh  service.sh  test_carrot.py  tests.py  urls.py  utilities.py  views.py
carrot/management/commands/: carrot.py  carrot_daemon.py  carrot_send.py
carrot/migrations/: 0001_initial.py  0002_add_task_name.py  0003_populate_task_name.py  0004_set_unique_task_name.py
carrot/static/carrot/: default.css  vuetify.min.css  vuetify.min.js
carrot/static/script/: vuetify.min.css  vuetify.min.js
carrot/templates/carrot/: base_site.html  carrot.js  completed_table.html  failed_table.html  field-errors.html  index.html  index.vue  info_table.html  messagelog_confirm_delete.html  messagelog_detail.html  messagelog_list.html  monitor.html  paginator.html  search_bar.html  (+8 more)
carrot/templatetags/: filters.py
docs/: Makefile  README.md  _config.yml  api.md  consumer.md  consumer.rst  doc_settings.py  models.rst  monitor.md  objects.rst  quick-start.md  release-notes.md  service.md  settings.md  utilities.rst
docs/_layouts/: default.html
docs/source/: api.rst  conf.py  consumer.rst  faq.rst  index.rst  models.rst  monitor.rst  quick-start.rst  readme.rst  release-notes.rst  service.rst  settings.rst  utilities.rst
legacy_docs/source/: conf.py
(+2 files in other folders)
