[tool.poetry]
name = "django-carrot"
version = "1.4.1"
description = "A RabbitMQ asynchronous task queue for Django."
authors = ["Christoper Davies <christopherdavies553@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/chris104957/django-carrot"
homepage = "https://django-carrot.readthedocs.io"
classifiers = [
    'Environment :: Web Environment',
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'Framework :: Django :: 1.9',
    'Framework :: Django :: 1.10',
    'Framework :: Django :: 1.11',
    'Framework :: Django :: 2.0',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
packages = [
    { include = "carrot" }
]


[tool.poetry.dependencies]
python = "^3.6.3"
sphinx_bootstrap_theme = "^0.6.5"
djangorestframework = "^3.9"
pika = "^0.13.1"
json2html = "^1.2"
django = "^2.1"
psutil = "^5.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mock = "^2.0"
python-coveralls = "^2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
